[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
run = 'snake:snake.run'

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-pyproject = "*"
isort = "*"
mypy = "*"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
