[project]
name = "snake"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "evprice", email = "elprice11@gmail.com" }
]
dependencies = [
    "pygame>=2.5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
snake = 'snake:snake.run'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snake"]

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"